<resources>
    <string name="app_name">SmartAlarm</string>
    <string name="start_alarm">Start</string>
    <string name="stop_alarm">Stop</string>
    <string name="menu">☰</string>
    <string name="set_alarm_time">Set alarm time</string>
    <string name="alert_dialog_ok">Done</string>
    <string name="menu_header">Menu</string>
    <string name="set_alarm_sound">Alarm sound</string>
    <string name="open_setting_dialog">></string>
    <string name="set_snooze_duration">Snooze duration</string>
    <string name="set_snooze_number">Snooze number</string>
    <string name="save_qr_code">Save default QR Code to gallery</string>
    <string name="about">About</string>
    <string name="snooze">Snooze</string>
    <string name="creator">Creator: sweak</string>
    <string name="github">github.com/sweakpl</string>
    <string name="scan_custom_qr_code">Scan to add custom QR Code</string>
    <string name="reset_qr_code">Reset QR Code to default</string>
    <string name="wrong_code">Wrong code!</string>
    <string name="new_code_added">New code to dismiss alarm added:</string>
    <string name="tap_to_try_again">Tap to try again!</string>
    <string name="camera_granted">Camera permission granted</string>
    <string name="camera_denied">Camera permission denied</string>
    <string name="alarm_title">Alarm off!</string>
    <string name="alarm_description">Time to wake up!</string>
    <string name="alarm_at">Alarm at: %1$s</string>
    <string name="default_code_added">Default code to dismiss alarm added:</string>
    <string name="code_added_to_gallery">QR code successfully added to Your gallery, now go and put it somewhere!</string>
    <string name="code_not_added_to_gallery">Failed to save the QR code to gallery…</string>
    <string name="code_not_added_to_gallery_version_issue">On Android 11 and 12 this function is temporarily unavailable. Please scan Your own QR code…</string>
    <string name="unset">Unset</string>
    <string name="preview">Preview</string>

    <string-array name="alarm_tones">
        <item>Default System</item>
        <item>Gentle Guitar</item>
        <item>Sunny Day</item>
        <item>Alarm Clock</item>
        <item>Analog Watch</item>
        <item>Air Horn Short</item>
        <item>Air Horn Long</item>
        <item>Siren Noise</item>
    </string-array>

    <string-array name="snooze_durations">
        <item>10</item>
        <item>5</item>
        <item>3</item>
        <item>2</item>
    </string-array>

    <string-array name="snooze_numbers">
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>
</resources>